# Movi-Fisio

./: .env  README.md  alembic.ini  movifisio.db  pyproject.toml
alembic/: env.py
alembic/versions/: 45d5081807b8_initial_migration.py  97e57045feab_initial_migration.py  e195cc99cd58_initial_migration.py
src/: auth_routes.py  dependencies.py  main.py  models.py  schedule_routes.py  schemas.py
